# keel

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md  THIRD-PARTY-LICENSE  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: .gitignore  BENCHMARKS.md  BUILT_IN.md  CATCHABLE_ERRORS.md  COMPARISONS.md  FS_LIB.md  MATH_LIB.md  RANDOM_LIB.md  STD_LIB.md  TIME_LIB.md  main.py  pyproject.toml  zensical.toml
docs/docs/: index.md
docs/docs/language-tour/: control-flow.md  data-types.md  dynamic-libraries.md  embedding.md  error-handling.md  functions.md  hello-world.md  modules.md  variables.md
docs/docs/reference/: errors.md  operators.md
docs/docs/standard-library/: built-in-functions.md  fs.md  math.md  random.md  time.md
examples/: fib.kl  guessing_game.kl  quicksort.kl  read_and_print.kl
examples/benchmarks/binary-trees/: binary-trees.kl
examples/benchmarks/fib/: fib.kl
examples/benchmarks/iter_fib/: iter_fib.lua  iter_fib.py
examples/benchmarks/nbody/: nbody_lua.kl  nbody_lua.lua
examples/benchmarks/quicksort/: quicksort.lua  quicksort.py
examples/binary-trees/: binary-trees.kl  binary-trees.lua  binary-trees.py
examples/fib/: fib.lua  fib.py
examples/iter_fib/: iter_fib.kl
examples/nbody/: nbody_lua.py  nbody_py.kl  nbody_py.lua  nbody_py.py
examples/quicksort/: quicksort.kl
libs/std/: math.kl  random.kl  time.kl
libs/std_src/: LIBS.MD
libs/std_src/math/: math-aarch64.dylib  math-x86_64.dylib  math.c
libs/std_src/random/: pcg_basic.h  random-aarch64.dylib  random-x86_64.dylib  random.c
libs/std_src/time/: time-aarch64.dylib  time-x86_64.dylib  time.c
pgo/: pgo-dynlib.kl  pgo-fizzbuzz.kl  pgo-import-test2.kl  pgo-import.kl  pgo-std-library.kl  pgo_dynlib.c  pgo_import_test.kl
src/: benchmark.rs  captured_output.rs  data.rs  instr.rs  lib.rs  main.rs  repl.rs  tests.rs  type_system.rs  wasm_output.rs
src/compiler/: compiler.rs  compiler_data.rs  compiler_errors.rs  expr.rs  grammar.lalrpop  registers.rs  type_system.rs
src/compiler/functions/: fs_lib_functions.rs  functions.rs  methods.rs  std_lib_functions.rs  std_lib_methods.rs  user_functions.rs
src/compiler/functions/builtin/: builtin_functions.rs  builtin_methods.rs
src/compiler/functions/fs/: fs_lib_functions.rs
src/parser/: blocks.rs  compiler.rs  compiler_data.rs  experimental_parser.rs  expr.rs  grammar.lalrpop  lexer.rs  parser.rs  parser_data.rs  parser_expr.rs  registers.rs  term.rs
src/parser/functions/: fs_lib_functions.rs  functions.rs  method_calls.rs  methods.rs  std_lib_functions.rs  std_lib_methods.rs  user_functions.rs
src/util/: display.rs  errors.rs  util.rs
src/vm/: array_gc.rs  string_gc.rs  vm.rs
src/vm/ffi/: ffi.rs
src/vm/gc/: array_gc.rs  map_gc.rs  string_gc.rs
std/: time.kl
std_src/math/: math.c
std_src/time/: time.c
