[package]
name = "keel"
version = "0.1.5"
edition = "2024"
authors = ["Horace Hoff <horace.hoff@gmail.com>"]
readme = "README.md"
repository = "https://github.com/horacehoff/keel"
homepage = "https://keel-lang.com"
license = "Apache-2.0"

[dependencies]
lalrpop-util = { version = "0.23.1", features = ["lexer"] }
inline_colorization = "0.1.6"
smol_strc = "0.3.6"
ariadne = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.9.0"
libffi = "5.1.0"
mimalloc = "0.1.52"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[lib]
name = "keel"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
lalrpop = "0.23.1"

[profile.opt]
inherits = "dev"
opt-level = 1
lto = "thin"
debug = false
strip = true
debug-assertions = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
strip = true
debug-assertions = false
incremental = false

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
strip = true

[profile.debugrelease]
inherits = "release"
lto = true
strip = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = false
panic = "abort"
rpath = true
incremental = false

[profile.debugrelease.package."*"]
opt-level = 3
debug = 2
codegen-units = 1
